<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_dialog">

    <ImageButton
        android:id="@+id/dialog_cancel"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/ic_baseline_cancel_24"
        android:background="@color/transparent"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:contentDescription="@string/dialog_close" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmation_message"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:textColor="@color/colorAccent4"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

    <Button
        android:id="@+id/dialog_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bordered_button"
        android:text="@string/yes"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:textColor="@color/colorAccent3"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textAllCaps="false"/>

</LinearLayout>